新文件：   api/manu_handler.go
